cis-perf/yaml/zone2/50-ns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2100
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2100.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2101
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2101.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2102
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2102.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2103
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2103.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2104
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2104.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2105
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2105.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2106
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2106.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2107
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2107.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2108
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2108.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2109
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2109.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2110
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2110.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2111
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2111.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2112
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2112.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2113
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2113.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2114
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2114.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2115
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2115.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2116
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2116.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2117
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2117.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2118
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2118.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2119
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2119.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2120
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2120.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2121
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2121.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2122
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2122.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2123
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2123.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2124
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2124.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2125
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2125.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2126
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2126.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2127
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2127.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2128
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2128.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2129
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2129.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2130
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2130.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2131
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2131.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2132
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2132.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2133
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2133.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2134
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2134.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2135
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2135.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2136
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2136.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2137
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2137.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2138
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2138.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2139
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2139.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2140
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2140.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2141
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2141.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2142
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2142.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2143
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2143.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2144
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2144.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2145
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2145.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2146
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2146.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2147
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2147.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2148
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2148.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  namespace: perftestzone2149
  annotations:
    virtual-server.f5.com/ip: "192.168.5.3"
spec:
  rules:
  - host: perftestzone2149.example.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: app-svc
          servicePort: 80
